[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/InteractionObject.gd" type="Script" id=1]
[ext_resource path="res://assets/interactions_objects-02.png" type="Texture" id=2]
[ext_resource path="res://assets/stove.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/stove_off.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 4.10964

[node name="Stove" type="StaticBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
messy = false
two_way = null

[node name="Messy" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 2787.6, 687.884, 110, 110 )
_sections_unfolded = [ "Region" ]

[node name="MessyCollision" type="CollisionShape2D" parent="." index="1"]

visible = false
position = Vector2( -0.70718, 0.830421 )
scale = Vector2( 24.3786, 22.3609 )
shape = SubResource( 1 )

[node name="Clean" type="Sprite" parent="." index="2"]

position = Vector2( -1, -1 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 2637.6, 686.884, 109, 110 )
_sections_unfolded = [ "Region" ]

[node name="CleanCollision" type="CollisionShape2D" parent="." index="3"]

visible = false
position = Vector2( -0.70718, 0.830421 )
scale = Vector2( 24.3786, 22.3609 )
shape = SubResource( 1 )

[node name="MessySound" type="AudioStreamPlayer2D" parent="." index="4"]

stream = ExtResource( 3 )
volume_db = -10.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="CleanSound" type="AudioStreamPlayer2D" parent="." index="5"]

stream = ExtResource( 4 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1


